--- a/assets/css/@376.css
+++ b/assets/css/@376.css
@@ -1,4 +1,5 @@
 @media screen and (max-width: 376px) {
+    #faq-container .position-abs.faq .faq,
     #testimonial-container .position-abs.testimonial .testimonial,
     #contact-container .position-abs.contact .contact,
     #services-container .position-abs.services .services,
@@ -71,6 +72,14 @@
         margin: 0;
         height: 100%;
     }
+    .faq-container-1 .card-body,
+    .faq-container-1 button {
+        width: 340px;
+    }
+    .faq-container-1 .card {
+        position: relative;
+        left: -27px;
+    }
     .footer-style .nav.links li a {
         position: relative;
         right: 17%;
@@ -78,5 +87,12 @@
     .footer-style .nav li a i::before {
         position: relative;
         left: -185px;
+    }
+    #basicAccordion .card.one {
+        margin: 0 10px 0 10px;
+    }
+    .faq-container-1 h1 {
+        position: relative;
+        left: 10%;
     }
 }
