--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,6 +3,7 @@
 @import url("@824.css") only screen and (max-width: 824px);
 @import url("@769.css")  only screen and (max-width: 769px);
 @import url("@737.css")  only screen and (max-width: 737px);
+@import url("@732.css")  only screen and (max-width: 732px);
 @import url("@668.css")  only screen and (max-width: 668px);
 @import url("@641.css")  only screen and (max-width: 641px);
 @import url("@426.css")  only screen and (max-width: 426px);
