--- a/assets/css/@426.css
+++ b/assets/css/@426.css
@@ -1,9 +1,13 @@
 @media screen and (max-width: 426px) {
+    #privacy-container .position-abs.privacy .privacy,
+    #faq-container .position-abs.faq .faq,
     #testimonial-container .position-abs.testimonial .testimonial,
+    #contact-container .position-abs.contact .contact,
+    #services-container .position-abs.services .services,
     #about-container .position-abs.about .about,
     #home-container .position-abs.home .home {
         position: relative;
-        left: 30px;
+        left: 0px;
         width: 300px !important;
     }
     #contact-container .position-abs.contact .contact,
@@ -65,6 +69,21 @@
     }
     .services-container-3 .col-sm-4.col-md-4.col-lg-4.text-center p {
         font-size: 16px;
+    }
+    .privacy-container-1 .nav.nav-pills {
+        position: relative;
+        left: -35px;
+    }
+    .privacy-container-1 .tab-pane p {
+        width: 340px;
+        position: relative;
+        margin: 0 0 0 70px;
+    }
+    .privacy-container-1 .tab-pane h4,
+    .privacy-container-1 .tab-pane h3 {
+        margin: 0 100px 0 80px;
+        width: 300px;
+        font-size: 100%;
     }
     .plans {
         position: relative;
